# tusdatos-demo

./: .gitignore  LICENSE  README.md  example.env  main.py  pyproject.toml  scraping_procesos.py  settings.py
crud/: actuacion.py  detalle.py  estado_consulta.py  proceso.py
db/: connection.py
models/: actuacion.py  detalle.py  entidad.py  estado_consulta.py  proceso.py  token.py  user.py
requests/: consultar_procesos.http  http-client.env.json  scraping.http  tusdatos.http
schemas/: actuacion.py  detalle.py  estado_consulta.py  proceso.py  user.py
scraping/: actor_ofendido.py  actuacion.py  consulta.py  demandado_procesado.py  detalle.py  entidad.py  main.py  proceso.py
